--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -4,4 +4,51 @@
   padding: 1rem;
   box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.3);
   border-radius: 15px;
+  align-items: center;
+}
+
+.icon {
+  flex: 1;
+  padding: 1rem;
+}
+
+.content {
+  flex: 7;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.title {
+  font-family: "Montserrat", sans-serif;
+  color: var(--green-dark);
+  margin: 0 0 1rem 0;
+  font-size: 1.1rem;
+}
+
+.date {
+  margin: 0;
+  font-weight: 500;
+}
+
+.comment {
+  margin: 0;
+  font-weight: 300;
+}
+
+.editButton {
+  padding: 0.5em;
+  background: transparent;
+  border: none;
+  align-self: flex-start;
+}
+
+.content input {
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid var(--black);
+  margin-bottom: 1rem;
+  width: 100%;
+  font-size: 1.1rem;
 }
