--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,7 +1,26 @@
+.container {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+
 .title {
-  margin: 1rem 2rem;
-  line-height: 1.15;
-  font-size: 4rem;
-  font-family: "Lobster", cursive;
-  color: var(--green-dark);
+  margin: 1rem 0;
+  height: 5rem;
+}
+
+.searchBox input {
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid var(--black);
+  margin-bottom: 2rem;
+  width: 30rem;
+  font-size: 1.1rem;
+  padding-inline-end: 2rem;
+}
+
+.searchBox button {
+  background: transparent;
+  border: none;
+  transform: translateX(-100%);
 }
