--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,10 +1,11 @@
 .container {
   height: 100vh;
-  padding: 2.5rem 2rem;
-  display: flex;
-  flex-direction: column;
+  padding: 0 2rem;
   margin: 0 auto;
   max-width: 1260px;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .main {
@@ -13,7 +14,7 @@
   grid-template-columns: 1fr 1fr;
   gap: 1rem;
   justify-content: space-evenly;
-  align-content: center;
+  align-content: flex-start;
 }
 
 @media (max-width: 600px) {
