--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -1,7 +1,6 @@
 .card {
   display: flex;
   background: var(--paper);
-  padding: 1rem;
   box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.3);
   border-radius: 15px;
   align-items: center;
@@ -21,7 +20,7 @@
 }
 
 .title {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   color: var(--green-dark);
   margin: 0 0 1rem 0;
   font-size: 1.1rem;
