--- a/src/styles/cards/ContentCard.module.css
+++ b/src/styles/cards/ContentCard.module.css
@@ -1,19 +1,10 @@
-.card {
-  display: flex;
-  background: var(--paper);
-  box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.3);
-  border-radius: 15px;
-  align-items: center;
-}
-
 .icon {
   flex: 1;
-  padding: 1rem;
 }
 
 .content {
   flex: 7;
-
+  padding-left: 1rem;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -41,13 +32,5 @@
   background: transparent;
   border: none;
   align-self: flex-start;
-}
-
-.content input {
-  background: transparent;
-  border: none;
-  border-bottom: 1px solid var(--black);
-  margin-bottom: 1rem;
-  width: 100%;
-  font-size: 1.1rem;
+  color: var(--green-dark);
 }
