--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -4,6 +4,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  background-color: var(--backgroud);
 }
 
 .footer a {
