--- a/src/styles/cards/AddCard.module.css
+++ b/src/styles/cards/AddCard.module.css
@@ -1,7 +1,7 @@
 .card {
   display: flex;
   background: var(--paper);
-  box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.3);
+  box-shadow: 3px 3px 4px 2px rgba(0, 0, 0, 0.3);
   border-radius: 15px;
   padding: 1rem;
 }
